--- a/templates/main/change_user_info.html
+++ b/templates/main/change_user_info.html
@@ -5,7 +5,7 @@
     <h2>Правка личных данных данных пользователя - {{ user.username }}</h2>
     <form method="post">
     {% csrf_token %}
-    {% bootstrap_form form layout='horisontal'%}
-    {% buttons submt='Сохранить'%}{% endbuttons %}
+    {% bootstrap_form form layout='horizontal'%}
+    {% buttons submit='Сохранить'%}{% endbuttons %}
     </form>
 {% endblock %}
