--- a/templates/main/list_product.html
+++ b/templates/main/list_product.html
@@ -15,7 +15,7 @@
         {% endif %}
  </a>
   <div class="card-body p-0 mt-3 mb-3">
-    <h5 class="card-title">{{ bb.title }}</h5>
+    <h5 class="text-left">{{ bb.title }}</h5>
        <h6>Цена: {{ bb.price }} грн.</h6>
 
         <p class="card-text right"><small class="text-muted">{{ bb.city }}, {{ bb.street }} <br>{{ bb.created_at }}</small></p>
