--- a/templates/layout/basic.html
+++ b/templates/layout/basic.html
@@ -8,12 +8,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}Главная{% endblock %} - Доска объявлений</title>
-<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
+<link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+ <link href="{% static '/images/star-on-big.png' %}" rel="shortcut icon" type="image/x-icon" />
 {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
 {% bootstrap_javascript jquery='slim'%}
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 </head>
 <body style="background: #f2f4f5;">
 <div class="page-wrapper chiller-theme toggled">
@@ -30,6 +35,24 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="col-lg-8 mb-3">
+                <div class="row">
+{#                <div class="col-lg-1 left">#}
+{##}
+{##}
+{##}
+{#<form action="{% url 'main:voice_search' %}" enctype="multipart/form-data" id="voice_search">#}
+{#{% csrf_token %}#}
+{##}
+{#<button onmousedown="Start()" onmouseup="Stop()" class="btn btn-danger "><i class="fa fa-microphone" aria-hidden="true"></i></button><p id="text"></p>#}
+{#    <a href="javascript:void(0);" id="save" class="btn btn-warning hidden"><i class="fa fa-download" aria-hidden="true"></i>#}
+{#Скачать</a>#}
+{#</form>#}
+{##}
+{##}
+{#</div>#}
+
+
+<div class="col-lg-10">
               <form action="{% url 'main:search' %}" method="GET">
                 <div class="input-group rounded mb-1">
                   <input type="search" class="form-control rounded" name="q" placeholder="Поиск по сайту"  />
@@ -37,7 +60,9 @@
                     <button type="submit" class="btn btn-default p-0"><i class="fas fa-search"></i></button>
                   </span>
                 </div>
-                </form>
+              </form>
+    </div>
+                    </div>
             </div>
         </div>
     </div>
@@ -65,6 +90,14 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+{#<script>#}
+{#function showSTR(trueTel) {#}
+{#document.getElementById('translationTel').firstChild.replaceData (0 , trueTel.length, trueTel);#}
+{#}#}
+{#</script>#}
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -107,5 +140,92 @@ $("#show-sidebar").click(function() {
 
 });
     </script>
+
+
+
+
+<script>
+var mediaRecorder;
+var recording = false;
+var recorder = navigator.mediaDevices.getUserMedia({audio:true});
+var interval;
+
+function Start(){
+        recorder.then(stream => {
+        mediaRecorder = new MediaRecorder(stream);
+        mediaRecorder.mimeType = 'audio/ogg';
+        recording = true;
+        mediaRecorder.start();
+        const audioChunks = [];
+        mediaRecorder.ondataavailable = (event) => {
+            audioChunks.push(event.data);
+        };
+        mediaRecorder.onstop = () => {
+            const audioBlob = new Blob(audioChunks, {type:'audio/ogg;codecs=0'});
+            const audioUrl = URL.createObjectURL(audioBlob);
+            var url = (window.URL || window.webkitURL).createObjectURL(audioBlob);
+            var link = document.getElementById("save");
+		    link.href = url;
+		    link.download = "record_voice.ogg";
+		    var audio = document.createElement('audio');
+		      audio.src = audioUrl;
+		      audio.autoplay = true;
+		    var a = document.cookie.split(';');
+            var token = ''
+            for (i = 0; i < a.length; i++) {
+                var b = a[i].split('=')
+                b[0] = b[0].replace(/\s+/g, '')
+                if (b[0] == 'csrftoken') {
+                    token = b[1]
+                }
+            }
+            var formData = new FormData();
+            formData.append('audio', audioBlob);
+            formData.append('url', url);
+            formData.append('token', token);
+
+            $.ajax({
+            headers: { "X-CSRFToken": token },
+            url: '{% url 'main:voice_search' %}',
+            type: 'POST',
+            xhrFields:{
+                responseType: 'blob'
+            },
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (formData) {
+                console.log("Ajax прошел");
+                var xhr = new XMLHttpRequest();
+                xhr.open('GET', 'http://127.0.0.1:8000', true);
+                xhr.send();
+            },
+            error: function () {
+              console.log("ERROR")
+            }
+        });
+
+            var xhr = new XMLHttpRequest();
+
+
+
+        };
+        interval = setInterval(function(){mediaRecorder.requestData();},100);
+    });
+    var element = document.getElementById("text");
+	element.innerHTML = "Голосовой поиск...";
+}
+function Stop(){
+    if( recording ){
+        recording = false;
+        clearInterval(interval);
+        mediaRecorder.stop();
+        var element = document.getElementById("text");
+		element.innerHTML = "";
+    }
+
+}
+</script>
+
 </body>
 </html>
