--- a/templates/layout/basic_no_search.html
+++ b/templates/layout/basic_no_search.html
@@ -23,7 +23,7 @@
   {% include 'layout/sidebar_nav.html' %}
   <!-- sidebar-wrapper  -->
   <main class="page-content">
-  <div class="container-fluid text-justify pt-0">
+  <div class="container">
 
            {% bootstrap_messages %}
 
